# cortex-gateway

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  pyproject.toml  renovate.json
.github/workflows/: ci.yml
src/gateway/: __init__.py  app.py  cli.py  config.py
src/gateway/blueprints/: __init__.py  backfill.py  config.py  emails.py  mappings.py  oauth.py  queue.py  sync.py  triage.py
src/gateway/services/: __init__.py  duckdb.py  postgres.py
tests/: __init__.py  conftest.py  test_placeholder.py  test_queue.py
